updated quote random api to get it working
